[gd_scene load_steps=16 format=3 uid="uid://bp86kcy71ew1k"]

[ext_resource type="Script" path="res://scenes/actors/enemy/enemy.gd" id="1_vd4wa"]
[ext_resource type="PackedScene" uid="uid://bstfduk5n3qph" path="res://scenes/components/health_component.tscn" id="2_xvaoj"]
[ext_resource type="Script" path="res://scenes/components/velocity_component.gd" id="3_53mh2"]
[ext_resource type="Texture2D" uid="uid://ceev1bj2x2hjr" path="res://assets/textures/items/watering_can.png" id="4_s5pb5"]
[ext_resource type="PackedScene" uid="uid://c44xhc34vg58v" path="res://scenes/overlap/hurtbox.tscn" id="5_dd2ne"]
[ext_resource type="Texture2D" uid="uid://ecu7ebddmkeu" path="res://assets/textures/shadows/shadow_medium.png" id="5_qxmdg"]
[ext_resource type="Texture2D" uid="uid://djbalehxwddkp" path="res://assets/textures/actors/dennis.png" id="5_sclgp"]
[ext_resource type="PackedScene" uid="uid://bfqlgc35dbc7y" path="res://scenes/overlap/hitbox.tscn" id="6_sqnd5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e3xyy"]
radius = 4.0
height = 24.5782

[sub_resource type="Animation" id="Animation_rr1wh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_iv4ar"]
resource_name = "attack"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_thyte"]
_data = {
"RESET": SubResource("Animation_rr1wh"),
"attack": SubResource("Animation_iv4ar")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_44yy2"]
size = Vector2(22, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_21qkl"]
size = Vector2(20, 18)

[sub_resource type="CircleShape2D" id="CircleShape2D_dwuja"]
radius = 1056.61

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 256
collision_mask = 257
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_vd4wa")

[node name="HealthComponent" parent="." instance=ExtResource("2_xvaoj")]
max_hp = 3

[node name="VelocityComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_53mh2")
max_speed = 210
acceleration = 2000
friction = 2000

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
rotation = 1.5708
scale = Vector2(1, 0.732358)
shape = SubResource("CapsuleShape2D_e3xyy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_thyte")
}
autoplay = "attack"

[node name="Body" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Watering Can" type="Sprite2D" parent="Body"]
position = Vector2(-16, -9)
texture = ExtResource("4_s5pb5")

[node name="ShadowMedium" type="Sprite2D" parent="Body"]
position = Vector2(0, 2)
texture = ExtResource("5_qxmdg")

[node name="Sprite" type="Sprite2D" parent="Body"]
position = Vector2(-9, -6)
scale = Vector2(0.989158, 0.986692)
texture = ExtResource("5_sclgp")

[node name="Hurtbox" parent="Body" node_paths=PackedStringArray("health_component", "velocity_component") instance=ExtResource("5_dd2ne")]
position = Vector2(-3, -11)
collision_layer = 512
collision_mask = 64
monitorable = true
health_component = NodePath("../../HealthComponent")
velocity_component = NodePath("../../VelocityComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Hurtbox"]
position = Vector2(3, 4.5)
shape = SubResource("RectangleShape2D_44yy2")

[node name="Hitbox" parent="Body" instance=ExtResource("6_sqnd5")]
unique_name_in_owner = true
position = Vector2(-3, -11)
collision_layer = 32
knockback_multiplier = 200.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Hitbox"]
position = Vector2(3, 5)
shape = SubResource("RectangleShape2D_21qkl")
debug_color = Color(0.894118, 0.278431, 0.411765, 0.419608)

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_dwuja")
debug_color = Color(0.568627, 0.552941, 0.145098, 0.0196078)

[connection signal="no_hp" from="HealthComponent" to="." method="die"]
[connection signal="area_entered" from="Body/Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]

[editable path="Body/Hurtbox"]
[editable path="Body/Hitbox"]
